--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,7 @@ body {
 .card__socials {
     display: flex;
     justify-content: center;
-    padding: 2.5rem 0;
+    padding: 3rem 0 2rem 0;
     border-top: 1px solid hsl(0, 0%, 93%);
 }
 
